--- a/theming/index.css
+++ b/theming/index.css
@@ -25,7 +25,7 @@ body {
     font-family: Open Sans;
 }
 
-p {
+.page-wrapper p {
 	font-family: Open Sans;
 	font-size: 18px;
 	color: #303030;
@@ -73,7 +73,7 @@ h3 {
 }
 
 @media only screen and (max-width: 600px){
-	p {
+	.page-wrapper p {
 	font-family: Open Sans;
 	font-size: 14px ;
 	color: #303030 ;
