--- a/theming/index.css
+++ b/theming/index.css
@@ -88,6 +88,13 @@ h3 {
 	top: 90px !important;
 }
 
+/* We hide the menu to change the theme,
+   it's not relevant
+*/
+.dropdown .pull-left .font-settings .js-toolbar-action {
+	display: none !important;
+}
+
 @media only screen and (max-width: 600px){
 	.page-wrapper p {
 	font-family: Open Sans;
