--- a/theming/index.css
+++ b/theming/index.css
@@ -95,6 +95,11 @@ h3 {
     display: none;
 }
 
+/* We hide the facebook link */
+.btn.pull-right.js-toolbar-action {
+	display: none;
+}
+
 @media only screen and (max-width: 600px){
 	.page-wrapper p {
 	font-family: Open Sans;
