--- a/theming/index.css
+++ b/theming/index.css
@@ -84,6 +84,7 @@ h3 {
     	font-size: 12px !important;
     	float : right;
 	padding-top: 0;    
+	font-style: italic;
 }
 
 #anchor-navigation-ex-navbar {
